# termed

./: README.md  README.rst  pyproject.toml
termed/: main.py  termed.py
termed/util/service/: __init__.py  service.py
tests/: test_termed.py
